fix .navbar-collapse non mobile position

--- a/intelliscout-webconsole-new/css/media_query.scss
+++ b/intelliscout-webconsole-new/css/media_query.scss
@@ -34,6 +34,10 @@
         .navbar-nav .open .dropdown-menu .divider {
             background-color: $greyLight;
         }
+
+        .navbar-collapse {
+            position: initial;
+        }
     }
 
     #navbar-team-toggle,
